♻️(build) Migrate to Stylelint (#208)
* Migrate to Stylelint

* Fix Sass linting issues

* Update CSS Custom Properties to use actual properties

Sass Lint had a problem with CSS Custom Properties so we had to do an interpolation hack to get around it. It's no longer needed

* Remove unneeded sass-lint comments

* Ensure Sass variables come before CSS custom properties

* Update staged linting to lint, not fix

Fixing will change what's staged but keep the changes staged. Only linting will fail instead

* Update package-lock after merge

--- a/site/sass/components/_image-card.scss
+++ b/site/sass/components/_image-card.scss
@@ -3,7 +3,7 @@
 .image-card {
   $content-space: pxRem(20px);
   $this: &;
-  #{'--offset-orientation'}: -1;
+  --offset-orientation: -1;
 
   align-items: center;
   display: flex;
@@ -43,14 +43,14 @@
 
   &:nth-of-type(even),
   &--flip {
-    #{'--offset-orientation'}: 1;
+    --offset-orientation: 1;
   }
 
   &--flip {
     flex-direction: row-reverse;
 
     &:nth-of-type(even) {
-      #{'--offset-orientation'}: -1;
+      --offset-orientation: -1;
       flex-direction: row;
     }
   }
