--- a/site/sass/components/_message.scss
+++ b/site/sass/components/_message.scss
@@ -1,7 +1,7 @@
 // Style for messages.
 
 .message {
-  #{'--message-icon'}: url('/images/icons/sprite.svg#info-sign');
+  --message-icon: url('/images/icons/sprite.svg#info-sign');
   background-color: var(--blue-25);
   border: 1px solid var(--blue-600);
   border-radius: 0.25rem;
@@ -23,19 +23,19 @@
   }
 
   &--note {
-    #{'--message-icon'}: url('/images/icons/sprite.svg#note-sign');
+    --message-icon: url('/images/icons/sprite.svg#note-sign');
     background-color: var(--yellow-50);
     border-color: var(--yellow-600);
   }
 
   &--warning {
-    #{'--message-icon'}: url('/images/icons/sprite.svg#warning-sign');
+    --message-icon: url('/images/icons/sprite.svg#warning-sign');
     background-color: var(--red-50);
     border-color: var(--red-600);
   }
 
   &--tip {
-    #{'--message-icon'}: url('/images/icons/sprite.svg#tip-sign');
+    --message-icon: url('/images/icons/sprite.svg#tip-sign');
     background-color: var(--green-50);
     border-color: var(--green-600);
   }
