--- a/site/sass/components/_reset.scss
+++ b/site/sass/components/_reset.scss
@@ -1,4 +1,3 @@
-// sass-lint:disable no-universal-selectors
 html,
 body,
 p,
@@ -43,7 +42,7 @@ h4,
 h5,
 h6 {
   font-size: 100%;
-  font-weight: normal;
+  font-weight: $font-weight-normal;
 }
 
 button,
