--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -60,7 +60,11 @@
     }
   }
 
-  // sass-lint:disable no-universal-selectors
+  &__contained > * {
+    margin: 0 auto;
+    max-width: $content-max-width;
+  }
+
   &--rhythm > *:not(:last-child) {
     margin-bottom: $block-spacing-m;
 
@@ -68,7 +72,6 @@
       margin-bottom: $block-spacing-r;
     }
   }
-  // sass-lint:enable no-universal-selectors
 
   &--full-top {
     margin-top: $block-spacing-m;
@@ -176,13 +179,6 @@
     overflow-x: hidden;
   }
 
-  // sass-lint:disable no-universal-selectors
-  &__contained > * {
-    margin: 0 auto;
-    max-width: $content-max-width;
-  }
-  // sass-lint:enable no-universal-selectors
-
   &__background {
     background-color: var(--grey-50);
     overflow: hidden;
@@ -207,30 +203,31 @@
     $circle-m: math.div(($circle-l + $circle-s), 2);
 
     $medium: math.div($circle-m, (math.div(math.div($circle-l, $scaler), 100vw)));
-    #{--circle-radius}: $circle-s;
-    #{--circle-offset}: -50; // sass-lint:disable-line no-duplicate-properties
+
+    --circle-radius: #{$circle-s};
+    --circle-offset: -50;
 
     @include mq($medium) {
-      #{--circle-radius}: $circle-m;
+      --circle-radius: #{$circle-m};
     }
 
     @include mq($max-width) {
-      #{--circle-radius}: $circle-l;
-      #{--circle-offset}: 0; // sass-lint:disable-line no-duplicate-properties
+      --circle-radius: #{$circle-l};
+      --circle-offset: 0;
     }
   }
 
   &__green-circle {
-    #{--shape-color}: var(--green-500);
+    --shape-color: var(--green-500);
   }
 
   &__yellow-circle {
-    #{--shape-color}: var(--yellow-500);
+    --shape-color: var(--yellow-500);
   }
 
   &--full-circles {
-    #{--circle-type}: full-circles;
-    #{--shape-color}: var(--blue-600), var(--yellow-500); // sass-lint:disable-line no-duplicate-properties
+    --circle-type: full-circles;
+    --shape-color: var(--blue-600), var(--yellow-500);
     background-image: paint(circles);
     height: 100%;
   }
