--- a/site/sass/globals/extends/_type.scss
+++ b/site/sass/globals/extends/_type.scss
@@ -92,7 +92,7 @@
   }
 
   &--caption {
-    #{--icon-offset}: 0.1em;
+    --icon-offset: 0.1em;
     @include fontSetup(14px, 18px, 400);
     color: var(--grey-700);
   }
@@ -142,7 +142,7 @@
     font-family: $font-mono;
     font-size: 0.8em;
     font-variant: small-caps;
-    font-weight: bold;
+    font-weight: $font-weight-bold;
     letter-spacing: pxRem(1px);
     margin: 0 0.125em;
     padding: 0 0.5em;
