update type scaling, colors, add headline mega to style guide

--- a/site/en/style-guide/typography/core.njk
+++ b/site/en/style-guide/typography/core.njk
@@ -28,6 +28,12 @@ fixed: |-
     {{ headlines | safe }}
   </div>
   <section class="style-guide__section">
+    <h1 class="type--mega">Headline Mega</h1>
+    <div class="type">
+      <p>Headline Mega is <code>36px</code>/<code>50.4px</code> on mobile and scales linearly from <code>48px</code>/<code>57.6px</code> to <code>56px</code>/<code>67.2px</code> between screen sizes of <code>420px</code> to <code>743px</code>. It scales linearly from <code>56px</code>/<code>64.4px</code> to <code>64px</code>/<code>73.6px</code> between screen sizes of <code>744px</code> and <code>1440px</code>. It's set in Google Sans with a font weight of <code>400</code>.</p>
+    </div>
+  </section>
+  <section class="style-guide__section">
     <h1 class="type--h1">Headline 1</h1>
     <div class="type">
       <p>Headline 1 grows from <code>36px</code>/<code>40px</code> to <code>60px</code>/<code>72px</code>, with a medium size of <code>48px</code>/<code>56px</code>. It's set in Google Sans Display with a font weight of <code>400</code>.</p>
