--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -55,11 +55,11 @@ $google-colors: (
   'grey-1000': #000000,
   'grey-900': #202124,
   'grey-800': #3c4043,
-  'grey-700': #5f6368,
+  'grey-700': #606367,
   'grey-600': #80868b,
   'grey-500': #9aa0a6,
   'grey-400': #bdc1c6,
-  'grey-300': #dadce0,
+  'grey-300': #dadcdf,
   'grey-200': #e8eaed,
   'grey-100': #f1f3f4,
   'grey-50': #f8f9fa,
