--- a/site/sass/globals/extends/_type.scss
+++ b/site/sass/globals/extends/_type.scss
@@ -1,74 +1,120 @@
+@use "sass:math";
+
 %type {
-  $bkpt-type--fablet: 744px;
-  $bkpt-type--tablet: 1140px;
-  $bkpt-type--desktop: 1600px;
+  $bkpt-type--fablet: 420px;
+  $bkpt-type--tablet: 744px;
+  $bkpt-type--desktop: 1024px;
+  $bkpt-type--desktop-lg: 1440px;
 
   &--header {
     color: var(--black);
     text-rendering: optimizeLegibility;
   }
 
-  // TODO: scaling intermediate font sizes/line-heights based off TBD anchor points: h1-h6, eyebrow
   &--mega {
-    @include flexFont((36px 50.4px), (50px, 61.8px), (64px 73.3px));
-    letter-spacing: -0.01em;
-    font-family: $font-google-sans;
+    @extend %type--header;
+    @include fontSetup(36px, 50.4px, 400);
+
+    @include mq($bkpt-type--fablet) {
+      @include scaleFontSize(pxRem($bkpt-type--fablet), pxRem($bkpt-type--tablet), pxRem(48px), pxRem(56px));
+      line-height: 1.2;
+    }
+    @include mq($bkpt-type--tablet) {
+      @include scaleFontSize(pxRem($bkpt-type--tablet), pxRem($bkpt-type--desktop-lg), pxRem(56px), pxRem(64px));
+      line-height: 1.15;
+    }
   }
 
   &--h1 {
     @extend %type--header;
-
-    @include flexFont((28px 39px), (40px 54px), (48px 64px), 400);
-    letter-spacing: -0.01em;
+    @include fontSetup(28px, 39.2px, 400);
     font-family: $font-google-sans;
 
+    @include mq($bkpt-type--fablet) {
+      @include scaleFontSize(pxRem($bkpt-type--fablet), pxRem($bkpt-type--tablet), pxRem(32px), pxRem(40px));
+      line-height: 1.3;
+    }
+
     @include mq($bkpt-type--tablet) {
-      letter-spacing: -0.02em;
+      @include scaleFontSize(pxRem($bkpt-type--tablet), pxRem($bkpt-type--desktop-lg), pxRem(40px), pxRem(48px));
     }
   }
 
   &--h2 {
     @extend %type--header;
-
-    @include flexFont((24px 34px), (40px 48px), (38px 44px), 400);
-    letter-spacing: -0.02em;
+    @include fontSetup(24px, 33.6px, 400);
+    letter-spacing: -0.01em;
     font-family: $font-google-sans;
 
+    @include mq($bkpt-type--fablet) {
+      @include scaleFontSize(pxRem($bkpt-type--fablet), pxRem($bkpt-type--tablet), pxRem(28px), pxRem(32px));
+      line-height: 1.3;
+    }
+
     @include mq($bkpt-type--tablet) {
-      letter-spacing: -0.02em;
+      @include scaleFontSize(pxRem($bkpt-type--tablet), pxRem($bkpt-type--desktop-lg), pxRem(32px), pxRem(38px));
+    }
+
+    @include mq($bkpt-type--desktop) {
+      line-height: 1.2;
     }
   }
   
-  &--h2-grow-h3 {
+  &--h2-shrink-h3 {
     @extend %type--header;
-
-    @include flexFont((24px 34px), (24px 34px), (30px 39px), 400);
+    @include fontSetup(24px, 33.6px, 400);
     letter-spacing: -0.01em;
     font-family: $font-google-sans;
+
+    @include mq($bkpt-type--tablet) {
+      @include scaleFontSize(pxRem($bkpt-type--tablet), pxRem($bkpt-type--desktop-lg), pxRem(24px), pxRem(30px));
+    }
+
+    @include mq($bkpt-type--desktop) {
+      line-height: 1.3;
+    }
   }
 
   &--h3 {
     @extend %type--header;
-
-    @include flexFont((20px 28px), (32px 40px), (30px 39px), 400);
+    @include fontSetup(20px, 28px, 400);
     letter-spacing: -0.01em;
     font-family: $font-google-sans;
+
+    @include mq($bkpt-type--fablet) {
+      @include scaleFontSize(pxRem($bkpt-type--fablet), pxRem($bkpt-type--tablet), pxRem(22px), pxRem(26px));
+      line-height: 1.3;
+    }
+
+    @include mq($bkpt-type--tablet) {
+      @include scaleFontSize(pxRem($bkpt-type--tablet), pxRem($bkpt-type--desktop-lg), pxRem(26px), pxRem(30px));
+    }
   }
 
   &--h4 {
     @extend %type--header;
-
-    @include flexFont((16px 22px), (28px 36px), (22px 31px), 400);
+    @include fontSetup(16px, 22.4px, 400);
     letter-spacing: -0.01em;
     font-family: $font-google-sans;
+
+    @include mq($bkpt-type--fablet) {
+      font-size: pxRem(20px);
+    }
+
+    @include mq($bkpt-type--tablet) {
+      @include scaleFontSize(pxRem($bkpt-type--tablet), pxRem($bkpt-type--desktop-lg), pxRem(20px), pxRem(22px));
+    }
   }
 
   &--h5 {
     @extend %type--header;
-
-    @include flexFont((12px 17px), (20px 28px), (18px 21px), 500);
+    @include fontSetup(18px, 23.4px, 500);
     letter-spacing: -0.01em;
     font-family: $font-google-sans;
+
+    @include mq($bkpt-type--fablet) {
+      line-height: 1.2;
+    }
   }
 
   &--h6 {
@@ -83,6 +129,10 @@
     letter-spacing: -0.01em;
     color: var(--grey-700);
     font-family: $font-google-sans;
+
+    @include mq($bkpt-type--fablet) {
+      line-height: 1.6;
+    }
   }
 
   &--large {
@@ -90,6 +140,18 @@
 
     @include fontSetup(18px, 27px, 400);
     letter-spacing: -0.01em;
+    
+    @include mq($bkpt-type--fablet) {
+      @include fontSetup(16px, 23.2px, 400);
+    }
+
+    @include mq($bkpt-type--tablet) {
+      @include scaleFontSize(pxRem($bkpt-type--tablet), pxRem($bkpt-type--desktop-lg), pxRem(16px), pxRem(18px));
+    }
+
+    @include mq($bkpt-type--desktop) {
+      line-height: 1.6;
+    }
   }
 
   &--small {
@@ -106,12 +168,15 @@
 
   &--eyebrow {
     @extend %type--header;
-
-    @include flexFont((12px 14px), (12px 14px), (12px 14px), 500);
+    @include fontSetup(12px, 12px, 500);
     display: inline-block;
     font-family: $font-google-sans;
     letter-spacing: -0.01em;
     text-transform: uppercase;
+
+    @include mq($bkpt-type--fablet) {
+      @include scaleFontSize(pxRem($bkpt-type--fablet), pxRem($bkpt-type--tablet), pxRem(12px), pxRem(14px));
+    }
 
     @include mq($bkpt-type--tablet) {
       letter-spacing: 0.01em;
@@ -131,7 +196,7 @@
 
   &--caption {
     #{--icon-offset}: 0.1em;
-    @include fontSetup(12px, 17px, 400);
+    @include fontSetup(12px, 16.8px, 400);
     letter-spacing: -0.01em;
     color: var(--grey-700);
   }
@@ -197,5 +262,11 @@
 
   &--list-item {
     margin-top: 0.5em;
+  }
+
+  &--cta {
+    @extend %type--header;
+
+    @include fontSetup(14px, 14px, 500);
   }
 }
