--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -84,6 +84,7 @@
 @import 'components/pagination';
 @import 'components/page-not-found';
 @import 'components/pwa-checklist';
+@import 'components/validation-card';
 
 // Page Layouts
 @import 'layouts/tech-detail';
