case studies, study card layout

--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -84,6 +84,8 @@
 @import 'components/pagination';
 @import 'components/page-not-found';
 @import 'components/pwa-checklist';
+@import 'components/case-studies';
+@import 'components/card-study';
 
 // Page Layouts
 @import 'layouts/tech-detail';
