--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -10,12 +10,18 @@ metadesc: Deliver rich, engaging Android, and Web apps for Chromebook with just 
 hideNewsletter: true
 ---
 
-{% from 'hero-animated.njk' import heroAnimated %} {% from 'card-stats.njk' import cardStats %} {% from 'image-card.njk' import imageCard %} {% from 'hero--cta.njk' import heroCta %} {% from 'item-grid.njk' import itemGrid %} {% from 'featured-content.njk' import featuredContent %} {% from 'call-out.njk' import callOut %} {% from 'footnotes.njk' import footnotes %}
+{% from 'hero-animated.njk' import heroAnimated %} {% from 'card-stats.njk' import cardStats %} {% from 'image-card.njk' import imageCard %} {% from 'hero--cta.njk' import heroCta %} {% from 'item-grid.njk' import itemGrid %} {% from 'featured-content.njk' import featuredContent %} {% from 'call-out.njk' import callOut %} {% from 'footnotes.njk' import footnotes %} {% from 'case-studies.njk' import caseStudies %}
 <div id="home" class="wrapper--hidden-x">
   <!-- Hero Animation -->
   <header id="home__hero" class="wrapper wrapper--full-bleed wrapper--no-bottom wrapper--no-top">
     {{ heroAnimated(l10n.home.hero.heading, l10n.home.hero.cta, l10n.home.hero.img) }}
   </header>
+
+  {% if landingCollections.homeCaseStudies.length > 0 %}
+  <div id="home__case-studies" class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background wrapper__contained">
+    {{ caseStudies(l10n.home.caseStudies, landingCollections.homeCaseStudies) }}
+  </div>
+  {% endif %}
 
   <!-- Chrome OS Stats -->
   <section id="home__stats" class="wrapper wrapper--full-bleed wrapper--no-top wrapper--no-bottom" aria-label="{{ l10n.home.results.desc }}">
