--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -8,13 +8,15 @@
 
 .wrapper {
   $content-max-width: pxRem(1440px);
-
+  $content-max-width: pxRem(1600px);
   $max-width: 1024px;
+  $max-width: 1440px;
   $scaler: math.div(math.div($max-width, 100), 1vw);
 
   $block-spacing-s: 5.75rem;
   $block-spacing-l: 7.5rem;
   $inline-spacing-s: 3.75rem;
+  $inline-spacing-s: 1.5rem;
   $inline-spacing-l: 5rem;
 
   $bumper-s: 0.875rem;
@@ -51,12 +53,14 @@
   }
 
   &--padded {
-    padding-left: $inline-spacing-m;
-    padding-right: $inline-spacing-m;
+    padding-left: $inline-spacing-r;
+    padding-right: $inline-spacing-r;
+    padding-left: fluid(pxRem(744px), pxRem(1140px), pxRem(24px), pxRem(60px));
+    padding-right: fluid(pxRem(744px), pxRem(1140px), pxRem(24px), pxRem(60px));
 
-    @supports (margin: clamp(1px, 1vw, 2px)) {
-      padding-left: $inline-spacing-r;
-      padding-right: $inline-spacing-r;
+    @include mq(1140px) {
+      padding-left: fluid(pxRem(1140px), $content-max-width, pxRem(60px), pxRem(80px));
+      padding-right: fluid(pxRem(1140px), $content-max-width, pxRem(60px), pxRem(80px));
     }
   }
 
